test/data/syntax-errors/function-missing-arrow.ava
var thisFunction = function () return0; end;